# carabistouille

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json
agent/: .dockerignore  Dockerfile  Dockerfile.lightpanda  config.js  entrypoint-lightpanda.sh  entrypoint.sh  package-lock.json  package.json  socks-server.js
agent/src/: analyzer.js  browser.js  index.js
agent/test/: config.test.js  protocol.test.js
config/: ice-servers.json
docker/: entrypoint.sh
docker/base/: Dockerfile
docker/chrome/: Dockerfile
docker/common/: default.pa  entrypoint.sh  supervisord.conf  xorg-neko-input.conf  xorg.conf
docker/firefox/: Dockerfile  policies.json
docker/xorg-deps/: README.md
runtime/: index.js  package-lock.json  package.json
scripts/: build-baliverne.sh  rebuild-chrome.sh  rebuild-firefox.sh
src/: db.rs  docker.rs  lib.rs  main.rs  models.rs  protocol.rs  state.rs
src/api/: mcp.rs  mod.rs  routes.rs  ws.rs
src/baliverne/: config.rs  mod.rs  protocol.rs  state.rs  stun.rs  turn_relay.rs  webrtc.rs  webrtc_stream.rs  webrtc_viewer.rs
src/baliverne/api/: ice.rs  mod.rs
src/baliverne/docker/: manager.rs  mod.rs
src/baliverne/ws/: handlers.rs  mod.rs
tests/: api.rs  db.rs  protocol.rs
web/: admin.css  admin.html  admin.js  app.js  i18n.js  index.html  style.css
xtest-injector/: Cargo.toml
xtest-injector/src/: main.rs
