[package]
name = "carabistouille"
version = "0.1.0"
edition = "2021"
description = "Malicious URL analyzer with remote browser instrumentation"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tempfile = "3"
